--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,9 @@
 <html>
-<head><title>Test Page</title>
-</head>
-<body>
-Current Fubers on-site:
-<script src="fubar.js"></script>
-</body>
+  <head>
+    <title>Test Page</title>
+  </head>
+  <body>
+    <div>Current Fubers on-site:</div>
+    <script src="fubar.js"></script>
+  </body>
 </html>
